终审报告迭代2修复：P1缓存弱引用+P2代码质量改进
P1级别修复（4项）：
- LambdaUtils.CACHE 添加大小限制强制执行，超过 MAX_CACHE_SIZE 时自动清空
- EntityClassResolver 缓存改用 ConcurrentReferenceHashMap 弱引用键，防止热部署类加载器泄漏
- Spotless 格式化修复（测试文件自动格式化）
- Between 范围校验逻辑提取到 PredicateHelper.validateRange()，消除8个方法中约48行重复代码

P2级别修复（5项）：
- OrConditionBuilder.eq()/ne() 添加 @Nullable 注解
- multiLike() null 关键字改为抛出 IllegalArgumentException
- SoftDeleteHelper.isSoftDeleted() 的 setAccessible 添加 SecurityException 错误处理
- InClauseBuilder 硬限制默认值从 50000 降低到 20000
- like()/notLike() 保持现有 @Deprecated 标记

测试结果：595 通过，0 失败